tests/baselines/reference/interfaceWithAccessibilityModifiers.errors.txt
interfaceWithAccessibilityModifiers.ts(3,5): error TS1070: 'public' modifier cannot appear on a type member.
interfaceWithAccessibilityModifiers.ts(4,5): error TS1070: 'private' modifier cannot appear on a type member.
interfaceWithAccessibilityModifiers.ts(5,5): error TS1070: 'protected' modifier cannot appear on a type member.


==== interfaceWithAccessibilityModifiers.ts (3 errors) ====
    // Errors
    interface Foo {
        public a: any;
        ~~~~~~
!!! error TS1070: 'public' modifier cannot appear on a type member.
        private b: any;
        ~~~~~~~
!!! error TS1070: 'private' modifier cannot appear on a type member.
        protected c: any;
        ~~~~~~~~~
!!! error TS1070: 'protected' modifier cannot appear on a type member.
    }